    - New feature: now an intro screen is displayed at the very first start of the app
    - Refactor the GUI with a new switch button
    - Refactor the credits view
    - Support for: spanish
    - More bug fixes
    - More optimization and clean
v1.9.1
    - Support for languages russian, german, portuguese and korean
v1.9.2
    - Fixed bug which may appear on start of the app
    - Fixed a display bug in the list of points (a strange x = 0 / y = 0 point)
    - Clean some verbatims
v1.9.3
    - Fixed bug which may produce a force close (NullPointerException on main activity's SwitchButton)
    - Fixed bug which may make a white icons bar for full screen views
    - Support for languages romanian, polish and finnish
v1.10.0 : Incredible Indri [on going]
    - Support for landscape mode for handsets and tablets
    - More support for 6", 7" and 10" screens devices
    - Fixed some bugs
    - Improved the credits view
    - Improved some components to make them more material
    - Support for italian and catalan
    - Standalone mode with an empty activity loading points and config file before starting the click process
    - Import the configuration of the app (process and points) from a JSON file
    - Export the configuration of the app (process and points) to a JSON file
    - Force the screen to be on if off
    - Keep the screen on if needed
    - Use a Shell script using ADB commands to unlock the screen if needed
    - Add some references to tutorials about how to root the device
    - Add new icons to floating arc menu
    - Standalone mode with points and config files
    - Standalone mode with points and config files and screen recognition
    - Possible to choose its time unit for the click process (ms, s or h)
    - The intro screen is available from the settings screen as an help
    - Refactor main view
    - Update credits view
    - Deal with the new system which manage permissions for Android 6.0+